# Slamity-Mac

./: .gitignore  CMakeLists.txt  README.md
GUI/: layout.txt
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
